Arreglo link WhatsApp

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ wp.i18n.setLocaleData( { 'text directionltr': [ 'ltr' ] } );
 
 
 <div class="wp-block-gutenify-buttons is-content-justification-center wp-block-buttons gutenify-buttons-version-2 gutenify-section-5fa0ab90-bfd1-11ef-8f2e-130c454403eb">
-<div class="wp-block-gutenify-button wp-block-button gutenify-button-version-2 gutenify-section-5f940160-bfd1-11ef-8f2e-130c454403eb"><a href="https://modelbolivia.github.io/adm-freddy_copa_uyuni/wa.link/fpclpa" class="gutenify-button-link wp-block-button__link"><span>Reclamar mi Premio</span></a></div>
+<div class="wp-block-gutenify-button wp-block-button gutenify-button-version-2 gutenify-section-5f940160-bfd1-11ef-8f2e-130c454403eb"><a href="https://wa.link/fpclpa" class="gutenify-button-link wp-block-button__link"><span>Reclamar mi Premio</span></a></div>
 </div>
 </div>
 
@@ -1014,7 +1014,7 @@ wp.i18n.setLocaleData( { 'text directionltr': [ 'ltr' ] } );
 
 
 <div class="wp-block-gutenify-buttons is-content-justification-center wp-block-buttons gutenify-buttons-version-2 gutenify-section-fc058f60-f6f4-11ee-8eed-cf35b84f59be">
-<div class="wp-block-gutenify-button wp-block-button gutenify-button-version-2 gutenify-section-995b6060-bfd0-11ef-8f2e-130c454403eb"><a href="https://modelbolivia.github.io/adm-freddy_copa_uyuni/wa.link/fpclpa" class="gutenify-button-link wp-block-button__link"><span>Reclamar mi Premio</span></a></div>
+<div class="wp-block-gutenify-button wp-block-button gutenify-button-version-2 gutenify-section-995b6060-bfd0-11ef-8f2e-130c454403eb"><a href="https://wa.link/fpclpa" class="gutenify-button-link wp-block-button__link"><span>Reclamar mi Premio</span></a></div>
 </div>
 </div>
 
